[gd_scene load_steps=4 format=3 uid="uid://cc5f84ah71fsh"]

[ext_resource type="Script" path="res://Scenes/Player/Player.gd" id="1_qsf5w"]
[ext_resource type="Script" path="res://Scenes/Items/ItemContainer.gd" id="2_ietwb"]
[ext_resource type="Script" path="res://Scenes/Player/TowerStash.gd" id="3_rmd8h"]

[node name="Player" type="Node" node_paths=PackedStringArray("_item_stash", "_horadric_stash", "_tower_stash")]
script = ExtResource("1_qsf5w")
_item_stash = NodePath("ItemStash")
_horadric_stash = NodePath("HoradricStash")
_tower_stash = NodePath("TowerStash")

[node name="ItemStash" type="Node" parent="."]
script = ExtResource("2_ietwb")
_capacity = 1000

[node name="HoradricStash" type="Node" parent="."]
script = ExtResource("2_ietwb")
_capacity = 5

[node name="TowerStash" type="Node" parent="."]
script = ExtResource("3_rmd8h")

[connection signal="items_changed" from="ItemStash" to="." method="_on_item_stash_items_changed"]
[connection signal="items_changed" from="HoradricStash" to="." method="_on_horadric_stash_items_changed"]
[connection signal="changed" from="TowerStash" to="." method="_on_tower_stash_changed"]
